@@ -12,34 +12,6 @@ it too :-).
 
 * Bugs
 
-** Sourceforge 690639
-http://sourceforge.net/tracker/index.php?func=detail&aid=690639&group_id=18598&atid=118598
-
-    request175 = HTTPRequest(headers = headers174)
-
-    tests[175] = Test(175, 'GET leftarrow.gif').wrap(request175)
-
-    headers174 = ( NVPair('Accept', '*/*'),
-    # ...
-
-headers174 should have been flushed to the output before test 175.
-
-Its down to the multithread nature of the recording (there is usually more than one connection and we handle each connection with a thread).  Smarter synchronisation is required.
-
-** Sourceforge 611114 
-http://sourceforge.net/tracker/index.php?func=detail&aid=611114&group_id=18598&atid=118598
-
-- use tomcat 4.1.10
-- use grinder 2.8.3
-- nt plattform
-- use TCPSniffer to record login into tomcat's admin
-console (admin/login.jsp)
-- then playback via grinder
-
-it cannot deal with j_security_check: 18.09.02 16:14:03: (thread 0
-cycle 24 test 6) Unknown response code: 400 (Invalid direct reference
-to form login page) for http://localhost/admin/j_security_check
-
 ** Sourceforge 691728
 http://sourceforge.net/tracker/index.php?func=detail&aid=691728&group_id=18598&atid=118598
 
